# spaceship-game

./: .gitignore  CMakeLists.txt  README.md
src/: asteroids.cpp  asteroids.h  background.cpp  background.h  constants.h  game.cpp  game.h  main.cpp  spaceship.cpp  spaceship.h  spacestation.cpp  spacestation.h  stb_image.h  utils.cpp  utils.h
